--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,8 @@ a {
     position: relative;
     bottom: 70px;
     right: 150px;
-    color: teal
+    color: teal;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 
 }
 
@@ -126,6 +127,7 @@ footer {
     position: relative;
     top: 20px;
     left: 675px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
 #p1 {
@@ -138,7 +140,8 @@ footer {
     left: 300px;
     bottom: 292px;
     font-size: 25px;
-    color: teal
+    color: teal;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 
 }
 
@@ -152,7 +155,9 @@ footer {
     left: 300px;
     bottom: 440px;
     font-size: 25px;
-    color: teal
+    color: teal;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
 
 }
 
@@ -252,4 +257,9 @@ footer {
     position: relative;
     left: 675px;
     top: 20px;
+}
+
+#move-up {
+    position: relative;
+    bottom: 20px;
 }
